# fastapi-exchange

./: .env  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml  reqs.txt  requirements.txt  test.db  Подсказки.docx
alembic/: env.py
alembic/versions/: 1acfdfb1742c_add_instrument2.py  3ec5c0799189_init_schema.py  52bc37859223_изменил_структуру_instrument_ticker_.py  614879ecaace_create_user_table_openapi_strict.py  861d735ce25d_timestamp_timezone.py  b4dcdf2751e2_initial_migration_for_postgres.py  bd613db110e0_add_filled_to_order.py
app/: dependencies.py  main.py
app/api/v1/: me.py  (+2 more)
app/core/: config.py  security.py
app/db/: session.py
app/models/: balance.py  instrument.py  order.py  transaction.py  user.py
app/schemas/: balance.py  instrument.py  ok.py  order.py  transaction.py  user.py
tests/: test_add_instrument.py  test_admin_delete_user.py  test_admin_dep_and_with_flow.py  test_admin_deposit_and_withdraw.py  test_balance.py  test_complex1.py  test_complex2.py  test_delete_instrument.py  test_get_orderbook.py  test_get_transactions.py  test_instrument.py  test_matching.py  test_matching2.py  test_me.py  test_negative.py  test_order.py  test_order_get_and_delete.py  test_order_list.py  test_register.py  test_user_flow1.py
tests1/: test2.py  test3.py  tests1.py
versions/: 2f09aac92189_new_user_schema.py  3165334c75cd_изменил_структуру_order.py  4fc9d5ee746f_add_balance_table.py  8c3d558c816f_add_instrument.py  e71874f973ee_add_transaction_table.py  e8510d8089c2_add_instrument_table2.py  ec8328ef60d6_add_order_table.py
(+12 files in other folders)
